--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Dancing Script", "Pacifico", "Shadows Into Light", "Caveat",
+    cursive, sans-serif;
   min-width: 100vh;
 }
